--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -22,7 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <title>React App</title>
+    <title>WTF.youdo</title>
   </head>
   <body>
     <noscript>
